// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expand and collapse link 1`] = `
<li>
  <a
    className="link-with-icon"
    href="scm:git:git@github.com"
    onClick={[Function]}
    target="_blank"
  >
    <i
      className="icon-color-link icon-detach"
    />
     
    Foo
  </a>
</li>
`;

exports[`should expand and collapse link 2`] = `
<li>
  <a
    className="link-with-icon"
    href="scm:git:git@github.com"
    onClick={[Function]}
    target="_blank"
  >
    <i
      className="icon-color-link icon-detach"
    />
     
    Foo
  </a>
  <div
    className="little-spacer-top"
  >
    <input
      className="overview-key"
      onClick={[Function]}
      readOnly={true}
      type="text"
      value="scm:git:git@github.com"
    />
  </div>
</li>
`;

exports[`should expand and collapse link 3`] = `
<li>
  <a
    className="link-with-icon"
    href="scm:git:git@github.com"
    onClick={[Function]}
    target="_blank"
  >
    <i
      className="icon-color-link icon-detach"
    />
     
    Foo
  </a>
</li>
`;

exports[`should match snapshot 1`] = `
<li>
  <a
    className="link-with-icon"
    href="http://example.com"
    target="_blank"
  >
    <i
      className="icon-color-link icon-detach"
    />
     
    Foo
  </a>
</li>
`;
